[package]
name = "squarepeg"
version = "0.3.0"
description = "A library for partitioning the Earth's geography"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/squarepeg"
repository = "https://github.com/DougLau/squarepeg"
readme = "README.md"
keywords = ["cartography", "gis"]
categories = ["encoding"]
edition = "2024"

[dependencies]
pointy = "0.8"
